<resources>
    <string name="app_name">MiPractica2</string>
    <string name="str_oscuro">Modo oscuro</string>
    <string name="strNombre">Nombre:</string>
    <string name="strApellido">Apellido:</string>
    <string name="strEdad">Edad:</string>
    <string name="hintNombre">Introduce tu nombre</string>
    <string name="hintApellidos">Introduce tus apellidos</string>
    <string name="hintEdad">Introduce tu edad</string>
    <string name="strSalir">Salir</string>
    <string name="hintResultdo">Aqui se muestra el resultado</string>
</resources>